# mexc_scalper

./: Cargo.toml  config.toml  tokens.txt
src/: config.rs  executor.rs  main.rs  telegram.rs
