[package]
name = "mexc_scalper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
url = "2.4"
hmac = "0.12"
sha2 = "0.10"
dotenv = "0.15"
chrono = "0.4"